31.7.2012 - version 0.1.1

* Arrows fixed back to normal. They were replaced by ?-mark when compressing style.css. 

* @link: http://stackoverflow.com/questions/2701192/ascii-character-for-up-down-triangle-arrow-to-display-in-html

18.6.2012 - version 0.1

* Everything is brand new.